- Fixed checkbox & radio inline form alignment when multiple rows are rendered

--- a/RockWeb/Styles/rock-components/checkbox.less
+++ b/RockWeb/Styles/rock-components/checkbox.less
@@ -221,6 +221,11 @@
 
   }
 
+  .radio-inline + .radio-inline,
+  .checkbox-inline + .checkbox-inline {
+    margin-left: 0;
+  }
+
   .checkbox,
   .checkbox-inline {
     input:checked ~ .label-text::after {
